feat() Foi adicicionado novas classe para manipular as imagens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -103,3 +103,17 @@
   margin-left: 35px;
   margin-right: 35px;
 }
+
+.conteudo-G {
+  display: flex;
+  width: 90%;
+  margin: 0 auto;
+  justify-content: space-between;
+  /* margin-top: -4px; */
+  /* margin-bottom: 19px; */
+}
+
+.imgGame {
+  width: 250px;
+  margin-top: 20px;
+}
