feat(app.component.html) Foi adicionado as imagens dos cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="card-game">
-    <div class="conteudo">
+    <div class="conteudo-G">
       <div class="displayBlock">
         <h1 class="txtBold">
           Hello young!! Welcome in my page. <br />
@@ -53,18 +53,22 @@
           </button>
           <button class="btn-Link">
             <a href="https://github.com/rony1533" target="_blank">
-              <img class="icons" src="../assets/GitHub.svg" />
+              <img class="icons" src="../assets/Leaderboard.svg" />
             </a>
           </button>
         </div>
       </div>
 
-      <img class="perfil" src="../assets/image 1 (1).png" alt="Foto do Rony" />
+      <img
+        class="imgGame"
+        src="../assets/Cards-Jokenpo.svg"
+        alt="Foto do Rony"
+      />
     </div>
   </div>
 
   <div class="card-game">
-    <div class="conteudo">
+    <div class="conteudo-G">
       <div class="displayBlock">
         <h1 class="txtBold">
           Hello young!! Welcome in my page. <br />
@@ -82,18 +86,22 @@
           </button>
           <button class="btn-Link">
             <a href="https://github.com/rony1533" target="_blank">
-              <img class="icons" src="../assets/GitHub.svg" />
+              <img class="icons" src="../assets/Leaderboard.svg" />
             </a>
           </button>
         </div>
       </div>
 
-      <img class="perfil" src="../assets/image 1 (1).png" alt="Foto do Rony" />
+      <img
+        class="imgGame"
+        src="../assets/Cards-Memoria.svg"
+        alt="Foto do Rony"
+      />
     </div>
   </div>
 
   <div class="card-game">
-    <div class="conteudo">
+    <div class="conteudo-G">
       <div class="displayBlock">
         <h1 class="txtBold">
           Hello young!! Welcome in my page. <br />
@@ -111,13 +119,13 @@
           </button>
           <button class="btn-Link">
             <a href="https://github.com/rony1533" target="_blank">
-              <img class="icons" src="../assets/GitHub.svg" />
+              <img class="icons" src="../assets/Leaderboard.svg" />
             </a>
           </button>
         </div>
       </div>
 
-      <img class="perfil" src="../assets/image 1 (1).png" alt="Foto do Rony" />
+      <img class="imgGame" src="../assets/Cards-Tiro.svg" alt="Foto do Rony" />
     </div>
   </div>
 </div>
