refactor(app.component.html) Alterando butoes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,20 +37,11 @@
   <div class="card-game">
     <div class="conteudo-G">
       <div class="displayBlock">
-        <h1 class="txtBold">
-          Hello young!! Welcome in my page. <br />
-          My name is Rony.
-        </h1>
+        <p class="txtBold c-white">JOKENPO</p>
+        <p class="txtNormal c-white">safasfafa</p>
 
         <div class="inlineAround">
-          <button class="btn-Link">
-            <a
-              href="https://www.linkedin.com/in/rony-sobral-5504381b4/"
-              target="_blank"
-            >
-              <img class="icons" src="../assets/LinkedIn.svg" />
-            </a>
-          </button>
+          <button class="btn-Link btn-play">JOGAR</button>
           <button class="btn-Link">
             <a href="https://github.com/rony1533" target="_blank">
               <img class="icons" src="../assets/Leaderboard.svg" />
@@ -70,20 +61,11 @@
   <div class="card-game">
     <div class="conteudo-G">
       <div class="displayBlock">
-        <h1 class="txtBold">
-          Hello young!! Welcome in my page. <br />
-          My name is Rony.
-        </h1>
+        <p class="txtBold c-white">JOKENPO</p>
+        <p class="txtNormal c-white">safasfafa</p>
 
         <div class="inlineAround">
-          <button class="btn-Link">
-            <a
-              href="https://www.linkedin.com/in/rony-sobral-5504381b4/"
-              target="_blank"
-            >
-              <img class="icons" src="../assets/LinkedIn.svg" />
-            </a>
-          </button>
+          <button class="btn-Link btn-play">JOGAR</button>
           <button class="btn-Link">
             <a href="https://github.com/rony1533" target="_blank">
               <img class="icons" src="../assets/Leaderboard.svg" />
@@ -103,20 +85,11 @@
   <div class="card-game">
     <div class="conteudo-G">
       <div class="displayBlock">
-        <h1 class="txtBold">
-          Hello young!! Welcome in my page. <br />
-          My name is Rony.
-        </h1>
+        <p class="txtBold c-white">JOKENPO</p>
+        <p class="txtNormal c-white">safasfafa</p>
 
         <div class="inlineAround">
-          <button class="btn-Link">
-            <a
-              href="https://www.linkedin.com/in/rony-sobral-5504381b4/"
-              target="_blank"
-            >
-              <img class="icons" src="../assets/LinkedIn.svg" />
-            </a>
-          </button>
+          <button class="btn-Link btn-play">JOGAR</button>
           <button class="btn-Link">
             <a href="https://github.com/rony1533" target="_blank">
               <img class="icons" src="../assets/Leaderboard.svg" />
