--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,19 +43,15 @@
 }
 
 .inlineAround {
-  width: 170px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .displayBlock {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
-  margin-left: 32px;
-  margin-bottom: 23px;
-  margin-top: 67px;
+  margin-top: 30px;
 }
 
 .perfil {
@@ -65,6 +61,7 @@
 .btn-Link {
   padding: 16px;
   border-radius: 16px;
+  margin-bottom: 24px;
 
   background-color: #212129;
   border: 1px solid #808080;
@@ -72,10 +69,14 @@
   transition: 0.15s linear;
 }
 
+.btn-play {
+  width: 130px;
+  margin-right: 24px;
+}
+
 .btn-Link:hover {
   background-color: #808080;
   border: 1px solid #212129;
-  transform: scale(0.9, 0.9);
   box-shadow: 0px 0px 10px 1px #312d2d;
   cursor: pointer;
 }
@@ -88,6 +89,12 @@
 .txtBold {
   font-weight: bold;
   font-size: 32px;
+}
+
+.txtNormal {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: normal;
 }
 
 .flex {
@@ -106,14 +113,12 @@
 
 .conteudo-G {
   display: flex;
+  height: 100%;
   width: 90%;
   margin: 0 auto;
   justify-content: space-between;
-  /* margin-top: -4px; */
-  /* margin-bottom: 19px; */
 }
 
 .imgGame {
-  width: 250px;
-  margin-top: 20px;
+  width: 230px;
 }
