--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  background-color: #1e2228;
+}
+
 .c-white {
   color: white;
 }
@@ -19,6 +30,7 @@
   font-weight: 700;
   font-size: 40px;
   line-height: 60px;
+  transition: 0.15s
 }
 
 .card-game {
@@ -59,7 +71,7 @@
 }
 
 .btn-Link {
-  padding: 16px;
+  padding: 5px 10px;
   border-radius: 16px;
   margin-bottom: 24px;
 
@@ -69,16 +81,18 @@
   transition: 0.15s linear;
 }
 
-.btn-play {
-  width: 130px;
-  margin-right: 24px;
-}
-
 .btn-Link:hover {
   background-color: #808080;
   border: 1px solid #212129;
   box-shadow: 0px 0px 10px 1px #312d2d;
   cursor: pointer;
+}
+
+
+
+.btn-play {
+  width: 130px;
+  margin-right: 16px;
 }
 
 .icons {
@@ -99,6 +113,10 @@
 
 .flex {
   display: flex;
+}
+
+.alignItemC {
+  align-items: center;
 }
 
 .hrLine {
